--- a/2_6_spacing.html
+++ b/2_6_spacing.html
@@ -164,7 +164,7 @@
 
         <!-- PL & PR -->
         <p>
-            <span class="bg-warning pl-5">Padding Right 5</span> dolor sit amet,
+            <span class="bg-warning pr-5">Padding Right 5</span> dolor sit amet,
             <span class="bg-warning pl-3">Padding Left 3 </span> elit. Voluptatum, optio.</p>
 
         <br>
@@ -184,7 +184,7 @@
         <br>
 
         <!-- ALL SIDES -->
-        <p class="bg-warning p-5">Padding All Sides 5</p>
+        <p class="bg-warning p-3">Padding All Sides 3</p>
 
         <!-- HORIZONTAL CENTERING -->
         <div class="bg-info mx-auto" style="width: 200px;">
