--- a/5_4_tooltips.html
+++ b/5_4_tooltips.html
@@ -88,29 +88,29 @@
     <!--###################START HERE######################-->
 
     <!-- TOOLTIPS -->
-    <button class="btn btn-primary">Tooltip On Top</button>
-    <button class="btn btn-success">Tooltip On Right</button>
-    <button class="btn btn-warning">Tooltip On Bottom</button>
-    <button class="btn btn-danger">Tooltip On Left</button>
+    <button class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip On Top</button>
+    <button class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip On Right</button>
+    <button class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip On Bottom</button>
+    <button class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip On Left</button>
 
     <br>
     <br>
 
     <!-- TOOLTIPS WITH HTML -->
-    <button class="btn btn-primary">Tooltip On With HTML</button>
+    <button id="hello" class="btn btn-primary" data-toggle="tooltip" data-placement="top" data-html="true" title="<h3>Hello</h3><p>Hello world.</p>">Tooltip On With HTML</button>
 
     <hr>
 
     <!-- TRIGGER WITH JS -->
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="showToolTip()">
       Show Tooltip
     </button>
 
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="hideToolTip()">
       Hide Tooltip
     </button>
 
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="toggleToolTip()">
       Toggle Tooltip
     </button>
 
@@ -126,6 +126,37 @@
     crossorigin="anonymous"></script>
   <script>
 
+    // Init tooltips
+    $('[data-toggle="tooltip"]').tooltip();
+
+    function showToolTip() {
+      $('#hello').tooltip('show');
+    }
+
+    function hideToolTip() {
+      $('#hello').tooltip('hide');
+    }
+
+    function toggleToolTip() {
+      $('#hello').tooltip('toggle');
+    }
+
+    // Tooltip events
+    $('#hello').on('show.bs.tooltip', function () {
+      console.log('Tooltip show');
+    })
+
+    $('#hello').on('shown.bs.tooltip', function () {
+      console.log('Tooltip shown');
+    })
+
+    $('#hello').on('hide.bs.tooltip', function () {
+      console.log('Tooltip hide');
+    })
+
+    $('#hello').on('hidden.bs.tooltip', function () {
+      console.log('Tooltip hidden');
+    })
   </script>
 </body>
 
