--- a/5_5_popovers.html
+++ b/5_5_popovers.html
@@ -88,36 +88,36 @@
     <!--##################START HERE####################-->
 
     <!-- POPOVER -->
-    <button class="btn btn-danger">
-      Toggle popover
+    <button class="btn btn-danger" data-toggle="popover" data-placement="top" data-content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, esse!">
+      Toggle popover TOP
     </button>
 
-    <button class="btn btn-primary">
-      Toggle popover
+    <button class="btn btn-primary" data-toggle="popover" data-placement="right" data-content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, esse!">
+      Toggle popover RIGHT
     </button>
 
-    <button class="btn btn-warning">
-      Toggle popover
+    <button class="btn btn-warning" data-toggle="popover" data-placement="bottom" data-content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, esse!">
+      Toggle popover BOTTOM
     </button>
 
-    <button class="btn btn-info">
-      Toggle popover
+    <button class="btn btn-info" data-toggle="popover" data-placement="left" data-content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, esse!">
+      Toggle popover LEFT
     </button>
 
     <br>
     <br>
 
     <!-- DISMISSIBLE POPOVER -->
-    <button class="btn btn-primary">
-      Toggle popover
+    <button id="hello" class="btn btn-primary" data-toggle="popover" data-placement="top" data-trigger="focus" data-content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, esse!">
+      Toggle popover DISMISSIBLE
     </button>
 
     <hr>
 
     <!-- CONTROL WITH JS -->
-    <button class="btn btn-secondary">Show Popover</button>
-    <button class="btn btn-secondary">Hide Popover</button>
-    <button class="btn btn-secondary">Toggle Popover</button>
+    <button class="btn btn-secondary" onclick="showPopover()">Show Popover</button>
+    <button class="btn btn-secondary" onclick="hidePopover()">Hide Popover</button>
+    <button class="btn btn-secondary" onclick="togglePopover()">Toggle Popover</button>
   </div>
 
   <div style="margin-top:500px;"></div>
@@ -129,7 +129,38 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
   <script>
+    // Init popovers
+    $('[data-toggle="popover"]').popover();
 
+    // JS Popover Conrols
+    function showPopover() {
+      $('#hello').popover('show');
+    }
+
+    function hidePopover() {
+      $('#hello').popover('hide');
+    }
+
+    function togglePopover() {
+      $('#hello').popover('toggle');
+    }
+
+    // Popover events
+    $('#hello').on('show.bs.popover', function () {
+      console.log('popover show');
+    })
+
+    $('#hello').on('shown.bs.popover', function () {
+      console.log('popover shown');
+    })
+
+    $('#hello').on('hide.bs.popover', function () {
+      console.log('popover hide');
+    })
+
+    $('#hello').on('hidden.bs.popover', function () {
+      console.log('popover hidden');
+    });
   </script>
 </body>
 
